--- a/MenuExample/res/values/strings.xml
+++ b/MenuExample/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_map_test">MapTestActivity</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_take_me_there">TakeMeThereActivity</string>
+    <string name="title_activity_destination_picker">DestinationPicker</string>
 
 </resources>
